<resources>
    <string name="app_name">Bands80</string>
    <string name="informations_title">Informações</string>
    <string name="location_text">Eliza Miranda Mall</string>
    <string name="phone_text">(92) 3085-4636</string>
    <string name="operating_hours_title">Horário de Funcionamento</string>
    <string name="operating_hours_text">Terça à Domingo de 18:00 às 23:00</string>
    <string name="more_operating_hours_title">Mais Informações</string>
    <string name="more_operating_hours_text">Venha Conhecer o Bands 80 Pizza, Burguer &amp; Cia ! Temos sanduíches feitos com hambúrguer artesanal e pizzas de sabores variados !!</string>
</resources>
