<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.marcelorocha.bands80.MainActivity">

        <ImageView
            android:id="@+id/logo_image"
            android:src="@drawable/bands80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/informations_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_image"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/informations_title" />

        <ImageView
            android:id="@+id/location_imageview"
            android:src="@drawable/ic_place_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="4dp"
            android:layout_below="@id/informations_title" />

        <TextView
            android:id="@+id/location_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/location_imageview"
            android:layout_below="@id/informations_title"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/location_text" />

        <ImageView
            android:id="@+id/phone_imageview"
            android:src="@drawable/ic_phone_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_below="@id/location_imageview" />

        <TextView
            android:id="@+id/phone_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/phone_imageview"
            android:layout_below="@id/location_textview"
            android:paddingRight="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/phone_text" />

        <TextView
            android:id="@+id/operating_hours_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_imageview"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/operating_hours_title" />

        <ImageView
            android:id="@+id/operating_hours_imageview"
            android:src="@drawable/ic_date_range_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_below="@id/operating_hours_title" />

        <TextView
            android:id="@+id/operating_hours_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/operating_hours_title"
            android:layout_toRightOf="@id/operating_hours_imageview"
            android:paddingRight="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/operating_hours_text" />

        <TextView
            android:id="@+id/more_informations_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/operating_hours_imageview"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/more_operating_hours_title" />

        <TextView
            android:id="@+id/more_informations_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/more_informations_title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/more_operating_hours_text" />

    </RelativeLayout>
</ScrollView>